# cosmikase

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  REVIEW.md  cosmikase.yaml  install.sh  omarchy-pop.yaml  pyproject.toml  update.sh
.github/workflows/: lint.yml
ansible/: ansible.cfg  playbook.yml  requirements.yml
chezmoi/: .chezmoi.toml.tmpl  .chezmoidata.yaml  dot_bashrc.tmpl  dot_inputrc  run_after_10-setup-theme.sh.tmpl
chezmoi/dot_config/Cursor/: extensions.txt
chezmoi/dot_config/alacritty/: alacritty.toml.tmpl
chezmoi/dot_config/nvim/: init.lua
chezmoi/dot_config/shell/: cosmikase.sh  omarchy-pop.sh  secrets.sh.tmpl
chezmoi/dot_config/zellij/: config.kdl.tmpl
chezmoi/dot_cursor/: mcp.json
cosmikase/udev/: 99-cosmikase-power.rules
docs/: DOCUMENTATION_REVIEW.md  architecture.md  backup-strategy.md  cli-reference.md  configuration-reference.md  cosmic-theming.md  cosmikase-menu.md  development.md  editor-theming.md  firejail-browsers.md  keybindings.md  omarchy-pop-menu.md  troubleshooting.md  yubikey-setup.md  zellij.md
dotfiles/Cursor/User/: keybindings.json  settings.json
dotfiles/antigravity/: config.toml
dotfiles/codex/: config.toml
dotfiles/ghostty/: config
dotfiles/home/: bashrc
dotfiles/kitty/: kitty.conf
dotfiles/nvim/: init.lua
dotfiles/obsidian/: core-plugins.json  obsidian.json
dotfiles/opencode/: config.toml
dotfiles/shell/: omarchy-pop.sh
dotfiles/ssh/: config
dotfiles/tmux/: tmux.conf
home-dotfiles/: .inputrc
omarchy/udev/: 99-omarchy-power.rules
plugins/bw-launcher/: Cargo.toml
plugins/bw-launcher/src/: main.rs
scripts/: migrate-themes.py  sync-theme-colors.py
src/cosmikase/: cli.py  config.py  schema.py  theme_tui.py  themes.py  validate.py
src/omarchy_pop/: __init__.py  chezmoi.py  config.py  theme_tui.py  themes.py
system-inventory/: apt-installed.tsv  apt-manual.txt  npm-global.json  snap-inferred.txt  uv-tools.txt
tests/: Containerfile.full  Containerfile.smoke  conftest.py  container-full-entrypoint.sh  container-full.sh  container-smoke.sh  test-config.yaml  test_chezmoi.py  test_config.py  test_integration.py  test_theme_tui.py  test_themes.py
themes/: README.md  WALLPAPERS.md  download-backgrounds.sh
themes/catppuccin/: antigravity.conf  cursor.json  nvim.lua  waybar.css
themes/catppuccin-latte/: cursor.json  mako.ini
themes/cosmic-dark/: alacritty.toml  cursor.json  ghostty.conf  kitty.conf  nvim.lua  waybar.css
themes/cosmic-light/: alacritty.toml  cursor.json  ghostty.conf  kitty.conf  nvim.lua  waybar.css
themes/ethereal/: cursor.json
themes/everforest/: cursor.json  mako.ini
themes/flexoki-light/: cursor.json  mako.ini
themes/gruvbox/: cursor.json  mako.ini
themes/hackerman/: cursor.json
themes/kanagawa/: cursor.json  mako.ini
themes/matte-black/: alacritty.toml  btop.theme  cursor.json  mako.ini
themes/nord/: antigravity.conf  cursor.json  mako.ini
themes/osaka-jade/: alacritty.toml  antigravity.conf  cursor.json  ghostty.conf  kitty.conf  nvim.lua  starship.toml  waybar.css
themes/pop-default/: alacritty.toml  cursor.json  ghostty.conf  kitty.conf  nvim.lua  theme.yaml  waybar.css
themes/ristretto/: cursor.json  mako.ini
themes/rose-pine/: cursor.json  mako.ini
themes/tokyo-night/: cursor.json  mako.ini  opencode.json
(+15 files in other folders)
