[project]
name = "cosmikase"
version = "0.2.0"
description = "COSMIC Omakase - Opinionated Pop!_OS workstation configuration"
authors = [
    { name = "Paul Brav", email = "paulbrav@github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
urls = { homepage = "https://github.com/paulbrav/cosmikase", repository = "https://github.com/paulbrav/cosmikase" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "textual>=0.76,<0.90",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ansible>=9.0",
    "ansible-lint>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cosmikase = "cosmikase.cli:run"
theme-tui = "cosmikase.theme_tui:run"
cosmikase-cli = "cosmikase.cli:run"
cosmikase-config = "cosmikase.config:_main"
cosmikase-chezmoi = "cosmikase.chezmoi:_main"
cosmikase-validate-ron = "cosmikase.validate:_main"
cosmikase-validate-config = "cosmikase.schema:_main"
cosmikase-themes-dir = "cosmikase.themes:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
