[package]
name = "bw-launcher"
version = "0.1.0"
edition = "2021"
description = "Pop!_OS launcher plugin for Bitwarden vault access"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
secret-service = "4.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

